# TDA-ML

./: .gitignore  AGENTS.md  CITATION.cff  README.md  REPRODUCIBILITY.md  main.py  pyproject.toml
configs/: README.md  base.yaml  best_tuned_params.yaml  dbscan_best.yaml  dev.yaml  issue59_verify_mahalanobis.yaml  multi_seed_config.yaml  paper_phase1.yaml  paper_phase1_repro_v2.yaml  paper_phase2.yaml  paper_phase2_fixed.yaml  paper_phase2_sine.yaml  paper_phase2_sine_p8.yaml  paper_phase2_sine_viz.yaml  paper_phase2_viz.yaml  phase2_aniso.yaml  phase2_aniso_large_eval.yaml  prod.yaml  quick_viz.yaml  reproduce.yaml  reproduce_1209.yaml  reproduce_ellphi_main.yaml  temp_sparsity_100.yaml  temp_sparsity_20_200.yaml  temp_sparsity_30_100.yaml  temp_sparsity_50.yaml  test_anisotropy.yaml  test_anisotropy_sparse.yaml  test_fast.yaml  test_fix.yaml  test_multi_seed.yaml  viz_aniso.yaml  viz_mnist_robust.yaml
experiments/: aggregate_paper_results.py  ellphi_postfix_autopipeline.sh  evaluate_paper_baselines.py  evaluate_paper_protocol.py  issue59_verify_mahalanobis.py  run_backend_multiseed.py
scripts/: ensure_pytorch_topological.sh
src/: data_loader.py  dbscan.py  losses.py  main.py  models.py  topology.py  trainer.py  utils.py
tda_ml/: __init__.py  checkpoint_io.py  config.py  data_loader.py  dbscan.py  distance_backend.py  ellphi_torch.py  geometry.py  gudhi_utils.py  losses.py  main.py  metrics.py  model_inference.py  models.py  numerical_eps.py  persistence.py  runtime_profile.py  seed_utils.py  supervised_diagnostics.py  topology.py  torch_util.py  trainer.py  (+1 more)
(+19 files in other folders)
